add mapper, constant